Finish basic transpiler implementations with polyfills Add optimize_table_initializers modifier (not tested yet) Add remove_empty_do modifier for convert_bit32 Fix and Implement convert_bit32 Add remove_number_literals modifier cargo fmt'ed Fix stack overflowing issue by increasing the stack size (it was due to full_moon exceeds the stack size, it'll be fixed later) so basic dal implementations are done maybe

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,3 +31,5 @@ toml = "0.8.19"
 url = "2.5.2"
 log = "0.4.21"
 indexmap = { version = "2.6.0", features = ["serde"] }
+pathdiff = "0.2.2"
+path-slash = "0.2.1"
