--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,6 +81,16 @@ jobs:
         with:
           ref: ${{ inputs.release_ref }}
 
+      - name: Install OpenSSL dependencies
+        if: ${{ matrix.os == 'ubuntu-latest' || matrix.os == 'macos-latest' }}
+        run: |
+          if [ "${{ matrix.os }}" == "ubuntu-latest" ]; then
+            sudo apt-get update
+            sudo apt-get install -y libssl-dev
+          elif [ "${{ matrix.os }}" == "macos-latest" ]; then
+            brew install openssl
+          fi
+
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
