--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -81,6 +81,31 @@ jobs:
         with:
           ref: ${{ inputs.release_ref }}
 
+      - name: Install OpenSSL (macOS)
+        if: matrix.os == 'macos-latest'
+        run: |
+          brew install openssl
+          echo "OPENSSL_ROOT_DIR=$(brew --prefix openssl)" >> $GITHUB_ENV
+
+      - name: Install cross-compilation dependencies
+        if: matrix.cargo-target == 'aarch64-unknown-linux-gnu'
+        run: |
+          sudo dpkg --add-architecture arm64
+          sudo apt-get update
+          sudo apt-get install -y \
+            gcc-aarch64-linux-gnu \
+            g++-aarch64-linux-gnu \
+            libssl-dev:arm64 \
+            pkg-config \
+            libc6-dev-arm64-cross
+
+      - name: Configure cross-compilation OpenSSL
+        if: matrix.cargo-target == 'aarch64-unknown-linux-gnu'
+        run: |
+          echo "[target.aarch64-unknown-linux-gnu]" >> .cargo/config.toml
+          echo 'linker = "aarch64-linux-gnu-gcc"' >> .cargo/config.toml
+          echo 'rustflags = ["-C", "link-arg=--sysroot=/usr/aarch64-linux-gnu"]' >> .cargo/config.toml
+
       - name: Install Rust
         uses: actions-rs/toolchain@v1
         with:
@@ -111,6 +136,11 @@ jobs:
         run: cargo build --locked --release --target ${{ matrix.cargo-target }}
         env:
           CARGO_TARGET_DIR: output
+          OPENSSL_DIR: /usr/aarch64-linux-gnu
+          OPENSSL_INCLUDE_DIR: /usr/aarch64-linux-gnu/include
+          OPENSSL_LIB_DIR: /usr/aarch64-linux-gnu/lib
+          PKG_CONFIG_PATH: /usr/lib/aarch64-linux-gnu/pkgconfig
+          PKG_CONFIG_SYSROOT_DIR: /usr/aarch64-linux-gnu
 
       - name: Setup archive
         shell: bash
