--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ auth-git2 = "0.5.5"
 blake3 = "1.5.4"
 clap = { version = "4.5.20", features = ["derive"] }
 dirs = "5.0.1"
+git2 = { version = "0.19.0", features = ["vendored-openssl"] }
 hex = "0.4.3"
 serde = { version = "1.0.214", features = ["derive"] }
 strfmt = "0.2.4"
@@ -48,7 +49,3 @@ anstyle = "1.0.10"
 indexmap = { version = "2.7.0", features = ["serde"] }
 url = { version = "2.5.4", features = ["serde"] }
 fs-err = "3.0.0"
-
-[dependencies.git2]
-features = ["vendored-openssl"]
-version = "*"
